# On-chain-Anomaly-Tracker

./: .dockerignore  .env  .gitignore  Dockerfile  Procfile  anomaly_report_20251017_195329.json  anomaly_report_20251018_105207.json  app.py  fly.toml  gitignore  liquidity_pool.py  main.py  package-lock.json  package.json  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.prod.txt  requirements.txt  vercel.json
Uniswap_V3/: .env  app.ipynb  blockchain_anomaly_tracker.ipynb  contract_analysis_0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2.json  data_fetching.ipynb  gitignore  infura.ipynb  uniswap.db  uniswap_v3_router.ipynb  webacy.ipynb
anomaly/: pyvenv.cfg
anomaly/Scripts/: activate  activate.bat  activate.fish
api/: index.py  pyproject.toml  setup.py
backend/: .dockerignore  .env  Dockerfile  anomaly_app.py  app.py  blockchain_anomaly_tracker.ipynb  blockchain_anomaly_tracker.py  build.sh  gunicorn.conf.py  liquidity_pool.ipynb  main.py  pyproject.toml  railway.json  railway.toml  requirements.txt  sandwich_attack.ipynb  sandwich_attack.py  threat_detector.py  threat_risk_detector.ipynb  threat_risk_detector.py  vercel.json  wallet_behavior.ipynb  wallet_behavior.py
frontend/: .env.production  .gitignore  .npmrc  QUICKSTART.md  README.md  index.html  next.config.js  next.config.ts  package-lock.json  package.json  requirements.txt  requirements.windows.txt  setup.ps1  tailwind.config.js  test-api.mjs  test.html  vercel.json  vite.config.js
frontend-app/: index.html  package.json  tailwind.config.js
frontend-app/src/: App.tsx  Index.css  (+1 more)
(+276 files in other folders)
