[project]
name = "chainwatch"
version = "1.0.0"
description = "ChainWatch Anomaly Detection API"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "chainwatch"
version = "1.0.0"
description = "ChainWatch Anomaly Detection API"
python-requires = ">=3.11,<3.12"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.0"
gunicorn = "^21.2.0"
numpy = "^1.26.3"
pandas = "^2.1.4"
pydantic = "^2.5.3"
python-dotenv = "^1.0.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
web3 = "^6.14.0"
aiohttp = "^3.9.3"